Fix T53691: Motion Tracking Object Solver Constraint doesn't work as Bone Constraint